--- a/src/main/resources/templates/project/projectList.html
+++ b/src/main/resources/templates/project/projectList.html
@@ -13,6 +13,9 @@
 
 	<body>
 		<div>
+			<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+				<legend>项目列表</legend>
+			</fieldset>
 
 			<blockquote class="layui-elem-quote">
 				<form id="searchForm" name="searchForm" class="layui-form" action="/project/projectList.html">
@@ -31,7 +34,7 @@
 						<label class="layui-form-label">状态:</label>
 						<div class="layui-input-inline">
 							<select name="projectStatus" th:value="${projectStatus}">
-								<option selected="" value="" >所有</option>
+								<option selected="" value="-1" >所有</option>
 								<option value="0">开发中</option>
 								<option value="1">升级中</option>
 								<option value="2">已完成</option>
@@ -40,7 +43,7 @@
 					</div>
 
 					<div class="layui-form-item">
-						<a href="@{/project/projectAdd.html}" class="layui-btn layui-btn-small">
+						<a id="add" class="layui-btn layui-btn-small">
 							<i class="layui-icon">&#xe608;</i>新增
 						</a>
 						<button class="layui-btn layui-btn-small"><i class="layui-icon">&#xe615;</i>搜索</button>
@@ -60,13 +63,12 @@
 							<col width="150"/>
 							<col width="150"/>
 							<col width="150"/>
-							<col width="200"/>
+							<col width="300"/>
 						</colgroup>
 
 						<thead>
 							<tr>
-								<th>
-									<input type="checkbox" name="id" lay-filter="allselector" lay-skin="primary"/></th>
+								<th>编号</th>
 								<th>名称</th>
 								<th>负责人</th>
 								<th>负责人电话</th>
@@ -79,7 +81,7 @@
 						</thead>
 						<tbody id="content">
 							<tr th:each="item : ${pageInfo.list}">
-								<td><input name="id" type="checkbox" lay-skin="primary"/></td>
+								<td th:text="${item.id}"></td>
 								<td th:text="${item.projectName}"></td>
 								<td th:text="${item.projectLeader}"></td>
 								<td th:text="${item.phone}"></td>
@@ -88,9 +90,12 @@
 								<td th:text="${item.operateTime}"></td>
 								<td th:text="${item.projectStatus}"></td>
 								<td>
-									<a href="/detail-1" target="_blank" class="layui-btn layui-btn-normal layui-btn-mini">预览</a>
-									<a href="javascript:;" data-name="{{ item.name }}" data-opt="edit" class="layui-btn layui-btn-mini">编辑</a>
-									<a href="javascript:;" data-id="1" data-opt="del" class="layui-btn layui-btn-danger layui-btn-mini">删除</a>
+									<a th:data="${item.id}" class="layui-btn layui-btn-normal layui-btn-mini">
+										<i class="layui-icon">&#xe642;编辑</i>
+									</a>
+									<a th:data="${item.id}" class="layui-btn layui-btn-danger layui-btn-mini">
+										<i class="layui-icon">&#xe640;删除</i>
+									</a>
 								</td>
 							</tr>
 						</tbody>
@@ -103,11 +108,10 @@
 		</div>
 	</body>
 	<script th:inline="javascript">
+		/*分页*/
         layui.use(['laypage', 'layer'], function() {
             var laypage = layui.laypage;
-            var layer = layui.layer;
-            //var pages = [[${pageInfo.pages}]];
-			pages=10;
+            var pages = [[${pageInfo.pages}]];
             laypage({
                 cont: 'paged',
                 first: 1,
@@ -116,6 +120,7 @@
                 prev: '上一页',
                 next: '下一页',
 				pages: pages, //总页数
+				skip: true,
                 groups: 5,//连续显示分页数
                 jump: function(obj, first){
                     //得到了当前页，用于向服务端请求对应数据
@@ -127,10 +132,9 @@
                 }
             });
         });
-
+		//表单提交
         layui.use('form', function(){
             var form = layui.form();
-            var layer = layui.layer;
 			//监听提交
             form.on('submit(searchForm)', function(data){
                 layer.msg(JSON.stringify(data.field));
@@ -138,5 +142,32 @@
             });
         });
 
-       </script>
+
+
+        layui.use('layer', function(){
+            var layer = layui.layer;
+            //删除
+            $(".layui-btn-danger").bind("click",function() {
+                var projectId = $(this).attr("data");
+                layer.confirm('确定要删除吗?', {icon: 3, title:'提示'}, function(index){
+                    location.href="../project/delProject.do?projectId="+projectId;
+                    layer.close(index);
+                });
+            });
+
+            //编辑
+            $(".layui-btn-normal").bind("click",function() {
+                var projectId = $(this).attr("data");
+                location.href="../project/editProject.html?projectId="+projectId;
+                layer.close(index);
+            });
+
+            $("#add").bind("click",function() {
+				location.href="addProject.html";
+            });
+
+        });
+
+
+	</script>
 </html>
