--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -56,7 +56,7 @@
 							</a>
 						</dd>
 						<dd>
-							<a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> 注销</a>
+							<a href="../login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> 注销</a>
 						</dd>
 					</dl>
 				</li>
@@ -64,7 +64,7 @@
 
 			<ul class="layui-nav admin-header-item-mobile">
 				<li class="layui-nav-item">
-					<a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> 注销</a>
+					<a href="../login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> 注销</a>
 				</li>
 			</ul>
 
