--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta charset="utf-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>登录</title>
-	<link rel="stylesheet" href="../../plugins/layui/css/layui.css" media="all" />
-	<link rel="stylesheet" href="../../css/login.css" />
+	<link rel="stylesheet" type="text/css" media="all" th:href="@{/plugins/layui/css/layui.css}" />
+	<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/login.css}" />
+	<link rel="stylesheet" type="text/css" media="all" th:href="@{http://www.jq22.com/jquery/font-awesome.4.6.0.css}" />
+
+	<script type="text/javascript" th:src="@{/plugins/layui/layui.js}"></script>
 </head>
 
 <body class="beg-login-bg">
@@ -17,26 +21,26 @@
 		<h1>后台登录</h1>
 	</header>
 	<div class="beg-login-main">
-		<form action="/manage/login" class="layui-form" method="post"><input name="__RequestVerificationToken" type="hidden" value="fkfh8D89BFqTdrE2iiSdG_L781RSRtdWOH411poVUWhxzA5MzI8es07g6KPYQh9Log-xf84pIR2RIAEkOokZL3Ee3UKmX0Jc8bW8jOdhqo81" />
+		<form action="/loginIn.do" class="layui-form" method="post"><input name="__RequestVerificationToken" type="hidden" value="fkfh8D89BFqTdrE2iiSdG_L781RSRtdWOH411poVUWhxzA5MzI8es07g6KPYQh9Log-xf84pIR2RIAEkOokZL3Ee3UKmX0Jc8bW8jOdhqo81" />
 			<div class="layui-form-item">
 				<label class="beg-login-icon">
 					<i class="layui-icon">&#xe612;</i>
 				</label>
-				<input type="text" name="userName" lay-verify="userName" autocomplete="off" placeholder="这里输入登录名" class="layui-input">
+				<input type="text" name="userName" lay-verify="userName" autocomplete="off" placeholder="这里输入登录名" class="layui-input"/>
 			</div>
 			<div class="layui-form-item">
 				<label class="beg-login-icon">
 					<i class="layui-icon">&#xe642;</i>
 				</label>
-				<input type="password" name="password" lay-verify="password" autocomplete="off" placeholder="这里输入密码" class="layui-input">
+				<input type="password" name="password" lay-verify="password" autocomplete="off" placeholder="这里输入密码" class="layui-input"/>
 			</div>
 			<div class="layui-form-item">
 				<div class="beg-pull-left beg-login-remember">
 					<label>记住帐号？</label>
-					<input type="checkbox" name="rememberMe" value="true" lay-skin="switch" checked title="记住帐号">
+					<input type="checkbox" name="rememberMe" value="true" lay-skin="switch" checked="checked" title="记住帐号"/>
 				</div>
 				<div class="beg-pull-right">
-					<button class="layui-btn layui-btn-primary" lay-submit lay-filter="login">
+					<button class="layui-btn layui-btn-primary"  lay-filter="login">
 						<i class="layui-icon">&#xe650;</i> 登录
 					</button>
 				</div>
@@ -45,10 +49,10 @@
 		</form>
 	</div>
 	<footer>
-		<p>Beginner © www.zhengjinfan.cn</p>
+		<p>PM © www.ectrip.com</p>
 	</footer>
 </div>
-<script type="text/javascript" src="../../plugins/layui/layui.js"></script>
+
 <script>
     layui.use(['layer', 'form'], function() {
         var layer = layui.layer,
@@ -57,7 +61,7 @@
 
         form.on('submit(login)',function(data){
 
-            location.href='index.html';
+            location.href='index/index.html';
             return false;
         });
     });
