--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>完成需求</title>
+    <title>添加用户</title>
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/plugins/layui/css/layui.css}" />
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/global.css}" />
     <link rel="stylesheet" type="text/css" media="all" th:href="@{http://www.jq22.com/jquery/font-awesome.4.6.0.css}" />
@@ -13,30 +13,30 @@
 <body>
     <div>
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>完成需求</legend>
+            <legend>增加用户</legend>
         </fieldset>
 
 
-        <form class="layui-form" action="/demand/completeDemand.do" method="post">
-            <input type="hidden" name="id" th:value="${demandId}"/>
-
+        <form name="user" class="layui-form" action="/user/saveUser.do" method="post">
 
             <div class="layui-form-item">
-                <label class="layui-form-label">实际完成时间</label>
+                <label class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
-                    <input class="layui-input" th:value="${currentDateTime}" name="actualEndTime"  onclick="layui.laydate({elem: this, festival: true})"/>
+                    <input type="text" name="userName" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
-
             <div class="layui-form-item">
-                <label class="layui-form-label">完成人</label>
+                <label class="layui-form-label">用户密码</label>
                 <div class="layui-input-inline">
-                    <input type="text"  th:value="${userName}" name="completeUserId" lay-verify="required"  autocomplete="off" class="layui-input"/>
+                    <input type="password" name="password" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
-
-
-
+            <div class="layui-form-item">
+                <label class="layui-form-label">确认密码</label>
+                <div class="layui-input-inline">
+                    <input type="password" name="repassword" autocomplete="off" class="layui-input"/>
+                </div>
+            </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" >立即提交</button>
@@ -54,33 +54,9 @@
         var form = layui.form();
 
         //监听提交
-        form.on('submit(formDemo)', function(data){
+        form.on('submit(modlePro)', function(data){
             layer.msg(JSON.stringify(data.field));
             return false;
         });
-    });
-
-    layui.use('laydate', function(){
-        var laydate = layui.laydate;
-
-        var start = {
-            min: laydate.now()
-            ,max: '2099-06-16 23:59:59'
-            ,istoday: false
-            ,choose: function(datas){
-                end.min = datas; //开始日选好后，重置结束日的最小日期
-                end.start = datas //将结束日的初始值设定为开始日
-            }
-        };
-
-        var end = {
-            min: laydate.now()
-            ,max: '2099-06-16 23:59:59'
-            ,istoday: false
-            ,choose: function(datas){
-                start.max = datas; //结束日选好后，重置开始日的最大日期
-            }
-        };
-
     });
 </script>
