--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<title>需求列表</title>
+		<title>用户列表</title>
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{/plugins/layui/css/layui.css}" />
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/global.css}" />
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{http://www.jq22.com/jquery/font-awesome.4.6.0.css}" />
@@ -14,28 +14,16 @@
 	<body>
 		<div>
 			<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-				<legend>需求列表</legend>
+				<legend>用户列表</legend>
 			</fieldset>
 
 			<blockquote class="layui-elem-quote">
-				<form id="searchForm" name="searchForm" class="layui-form" action="/demand/demandList.html">
+				<form id="searchForm" name="searchForm" class="layui-form" action="/user/userList.html">
 					<input type="hidden" id="pageNo" name="pageNo" th:value="${pageInfo.pageNum}"/>
 					<div class="layui-form-item">
-						<label class="layui-form-label">项目:</label>
+						<label class="layui-form-label">用户名称:</label>
 						<div class="layui-input-inline">
-							<select name="projectId" >
-								<option th:each="item: ${projectList}" th:value="${item.id}" th:text="${item.projectName}" ></option>
-							</select>
-						</div>
-
-						<label class="layui-form-label">项目名称:</label>
-						<div class="layui-input-inline">
-							<input type="text" name="projectName" th:value="${projectName}"  placeholder="请输入项目名称" autocomplete="off" class="layui-input"/>
-						</div>
-
-						<label class="layui-form-label">需求名称:</label>
-						<div class="layui-input-inline">
-							<input type="text" name="demandName" th:value="${demandName}"  placeholder="请输入需求名称" autocomplete="off" class="layui-input"/>
+							<input type="text" name="userName" th:value="${userName}"  autocomplete="off" class="layui-input"/>
 						</div>
 					</div>
 
@@ -53,63 +41,31 @@
 					<table class="layui-table ">
 						<colgroup>
 							<col width="50"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="150"/>
-							<col width="100"/>
-							<col width="600"/>
+							<col width="200"/>
+							<col width="200"/>
+							<col width="200"/>
 						</colgroup>
 
 						<thead>
 							<tr>
 								<th>编号</th>
-								<th>项目名称</th>
-								<th>需求名称</th>
-								<th>需求描述</th>
-								<th>提出时间</th>
-								<th>提出人</th>
-								<th>当前版本</th>
-								<th>预期完成时间</th>
-								<th>实际完成时间</th>
-								<th>完成人</th>
-								<th>需求状态</th>
-								<th>完成</th>
+								<th>用户名</th>
+								<th>密码</th>
 								<th>操作</th>
 							</tr>
 						</thead>
 						<tbody id="content">
 							<tr th:each="item : ${pageInfo.list}">
 								<td th:text="${item.id}"></td>
-								<td th:text="${item.projectName}"></td>
-								<td th:text="${item.demandName}"></td>
-								<td th:text="${item.demandDescribe}"></td>
-								<td th:text="${item.putTime}"></td>
-								<td th:text="${item.putUserId}"></td>
-								<td th:text="${item.version}"></td>
-								<td th:text="${item.exceptEndTime}"></td>
-								<td th:text="${item.actualEndTime}"></td>
-								<td th:text="${item.completeUserId}"></td>
-								<td th:text="${item.demandStatus}"></td>
-								<td>
-									<a th:data="${item.id}" class="layui-btn layui-btn-default layui-btn-mini">
-										<i class="layui-icon">&#xe642;完成</i>
-									</a>
-								</td>
+								<td th:text="${item.userName}"></td>
+								<td th:text="${item.password}"></td>
 								<td>
 									<a th:data="${item.id}" class="layui-btn layui-btn-normal layui-btn-mini">
-										<i class="layui-icon">&#xe642;</i>
+										<i class="layui-icon">&#xe642;编辑</i>
 									</a>
 									<a th:data="${item.id}" class="layui-btn layui-btn-danger layui-btn-mini">
-										<i class="layui-icon">&#xe640;</i>
+										<i class="layui-icon">&#xe640;删除</i>
 									</a>
-
 								</td>
 							</tr>
 						</tbody>
@@ -164,7 +120,8 @@
             $(".layui-btn-danger").bind("click",function() {
                 var id = $(this).attr("data");
                 layer.confirm('确定要删除吗?', {icon: 3, title:'提示'}, function(index){
-                    location.href="../demand/delDemand.do?demandId="+id;
+                    //do something
+                    location.href="../user/delUser.do?userId="+id;;
                     layer.close(index);
                 });
             });
@@ -172,22 +129,13 @@
             //编辑
             $(".layui-btn-normal").bind("click",function() {
                 var id = $(this).attr("data");
-                location.href="../demand/editDemand.html?demandId="+id;
+                location.href="../user/editUser.html?userId="+id;
                 layer.close(index);
             });
 
-            //完成
-            $(".layui-btn-default").bind("click",function() {
-                var id = $(this).attr("data");
-                location.href="../demand/completeDemand.html?demandId="+id;
-                layer.close(index);
-            });
-            /**
-			 * 发起需求
-             */
+
             $("#add").bind("click",function() {
-                var projectId = $("select[name='projectId']").val();
-				location.href="addDemand.html?projectId="+projectId;
+				location.href="../user/addUser.html";
             });
 
         });
