--- a/src/main/resources/templates/projectInfo/addProjectInfo.html
+++ b/src/main/resources/templates/projectInfo/addProjectInfo.html
@@ -30,43 +30,43 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">服务器IP</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="serverIp"  lay-verify="required" placeholder="请输入项目名称" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="serverIp"  lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库服务器IP</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbServerIp"  lay-verify="required" placeholder="请输入项目负责人" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbServerIp"  lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库用户名</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbUser" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbUser" lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库密码</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbPwd" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbPwd" lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库端口</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbPort" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbPort" lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">域名</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="hostName" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="hostName" lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">SSH</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="ssh" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="ssh" lay-verify="required" required="required"  autocomplete="off" class="layui-input"/>
                 </div>
             </div>
 
