--- a/src/main/resources/templates/projectInfo/editProjectInfo.html
+++ b/src/main/resources/templates/projectInfo/editProjectInfo.html
@@ -24,43 +24,43 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">服务器IP</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="serverIp" th:value="${projectInfo.serverIp}"  lay-verify="required" placeholder="请输入项目名称" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="serverIp" th:value="${projectInfo.serverIp}" required="required"  lay-verify="required" placeholder="请输入项目名称" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库服务器IP</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbServerIp" th:value="${projectInfo.dbServerIp}"   lay-verify="required" placeholder="请输入项目负责人" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbServerIp" th:value="${projectInfo.dbServerIp}"  required="required"  lay-verify="required" placeholder="请输入项目负责人" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库用户名</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbUser" th:value="${projectInfo.dbUser}"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbUser" th:value="${projectInfo.dbUser}" required="required"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库密码</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbPwd" th:value="${projectInfo.dbPwd}"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbPwd" th:value="${projectInfo.dbPwd}" required="required"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">数据库端口</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="dbPort" th:value="${projectInfo.dbPort}"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="dbPort" th:value="${projectInfo.dbPort}" required="required"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">域名</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="hostName" th:value="${projectInfo.hostName}"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="hostName" th:value="${projectInfo.hostName}" required="required"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">SSH</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="ssh" th:value="${projectInfo.ssh}"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+                    <input type="text" name="ssh" th:value="${projectInfo.ssh}" required="required"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
 
