--- a/src/main/resources/templates/projectModle/editProjectModle.html
+++ b/src/main/resources/templates/projectModle/editProjectModle.html
@@ -39,7 +39,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">模块描述</label>
                 <div class="layui-input-block">
-                    <textarea name= "modleDescribe" th:text="${modle.modleDescribe}" placeholder="请输入模块描述" class="layui-textarea"></textarea>
+                    <textarea name= "modleDescribe" th:text="${modle.modleDescribe}" required="required"  class="layui-textarea"></textarea>
                 </div>
             </div>
             <div class="layui-form-item">
