--- a/src/main/resources/templates/projectModle/modleVersionList.html
+++ b/src/main/resources/templates/projectModle/modleVersionList.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<title>项目模块列表</title>
+		<title>模块版本列表</title>
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{/plugins/layui/css/layui.css}" />
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/global.css}" />
 		<link rel="stylesheet" type="text/css" media="all" th:href="@{http://www.jq22.com/jquery/font-awesome.4.6.0.css}" />
@@ -14,35 +14,8 @@
 	<body>
 		<div>
 			<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-				<legend>项目模块列表</legend>
+				<legend>模块版本列表</legend>
 			</fieldset>
-
-			<blockquote class="layui-elem-quote">
-				<form id="searchForm" name="searchForm" class="layui-form" action="/modle/modleList.html">
-					<input type="hidden" id="pageNo" name="pageNo" th:value="${pageInfo.pageNum}"/>
-
-					<div class="layui-form-item">
-						<label class="layui-form-label">项目:</label>
-						<div class="layui-input-inline">
-							<select name="projectId" >
-								<option th:each="item: ${projectList}" th:value="${item.id}" th:text="${item.projectName}" ></option>
-							</select>
-						</div>
-
-						<label class="layui-form-label">模块名称:</label>
-						<div class="layui-input-inline">
-							<input type="text" name="modleName" th:value="${modleName}"  placeholder="请输入项目名称" autocomplete="off" class="layui-input"/>
-						</div>
-					</div>
-
-					<div class="layui-form-item">
-						<a id="add" class="layui-btn layui-btn-small">
-							<i class="layui-icon">&#xe608;</i>新增
-						</a>
-						<button class="layui-btn layui-btn-small"><i class="layui-icon">&#xe615;</i>搜索</button>
-					</div>
-				</form>
-			</blockquote>
 
 			<fieldset class="layui-elem-field">
 				<div class="layui-field-box layui-form">
@@ -51,35 +24,20 @@
 							<col width="50"/>
 							<col width="150"/>
 							<col width="150"/>
-							<col width="150"/>
 						</colgroup>
 
 						<thead>
 							<tr>
 								<th>编号</th>
-								<th>名称</th>
+								<th>版本号</th>
 								<th>状态</th>
-								<th>描述</th>
-								<th>操作</th>
 							</tr>
 						</thead>
 						<tbody id="content">
 							<tr th:each="item : ${pageInfo.list}">
 								<td th:text="${item.id}"></td>
-								<td th:text="${item.modleName}"></td>
-								<td th:text="${item.modleState}"></td>
-								<td th:text="${item.modleDescribe}"></td>
-								<td>
-									<a th:data="${item.id}" class="layui-btn layui-btn-normal layui-btn-mini">
-										<i class="layui-icon">&#xe642;编辑</i>
-									</a>
-									<a th:data="${item.id}" class="layui-btn layui-btn-danger layui-btn-mini">
-										<i class="layui-icon">&#xe640;删除</i>
-									</a>
-									<a th:data="${item.id}" class="layui-btn layui-btn-default layui-btn-mini">
-										<i class="layui-icon">&#xe630;历史版本</i>
-									</a>
-								</td>
+								<td th:text="${item.version}"></td>
+								<td th:text="${item.versionState}"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -142,13 +100,6 @@
             $(".layui-btn-normal").bind("click",function() {
                 var modleId = $(this).attr("data");
                 location.href="../modle/editModle.html?modleId="+modleId;
-                layer.close(index);
-            });
-
-            //历史版本
-            $(".layui-btn-default").bind("click",function() {
-                var modleId = $(this).attr("data");
-                location.href="../modle/modleVersionList.html?modleId="+modleId;
                 layer.close(index);
             });
 
