--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -17,24 +17,26 @@
         </fieldset>
 
 
-        <form name="user" class="layui-form" action="/user/saveUser.do" method="post">
+        <form name="user" class="layui-form" action="/user/saveUser.do" th:object="${user}" method="post">
 
             <div class="layui-form-item">
                 <label class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="userName" autocomplete="off" class="layui-input"/>
+                    <input type="text" th:field="*{userName}" name="userName" autocomplete="off" required="required" class="layui-input"/>
+                    <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" style="color: red"></p>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">用户密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="password" autocomplete="off" class="layui-input"/>
+                    <input type="password" th:field="*{password}" name="password" autocomplete="off" required="required" class="layui-input"/>
+                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></p>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">确认密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="repassword" autocomplete="off" class="layui-input"/>
+                    <input type="password" name="repassword" required="required" autocomplete="off" class="layui-input"/>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -52,7 +54,7 @@
     //Demo
     layui.use('form', function(){
         var form = layui.form();
-
+        var layer = layui.layer;
         //监听提交
         form.on('submit(modlePro)', function(data){
             layer.msg(JSON.stringify(data.field));
