增加锁屏功能校验

--- a/src/main/resources/templates/index/main.html
+++ b/src/main/resources/templates/index/main.html
@@ -12,30 +12,19 @@
 <div class="admin-main">
 	<blockquote class="layui-elem-quote">
 		<p>本模板基于LayUI实现 ,支持所有LayUI组件.</p>
-		LayUI文档地址：
-		<a href="http://www.layui.com/doc" target="_blank">http://www.layui.com/doc</a>
-		<p>项目地址：
-			<a href="http://git.oschina.net/besteasyteam/beginner_admin" target="_blank">http://git.oschina.net/besteasyteam/beginner_admin</a>
-		</p>
 		<p>建议反馈和问题收集地址:
-			<a href="http://beginner.zhengjinfan.cn/detail-36" target="_blank">http://beginner.zhengjinfan.cn/detail-36</a>
+			<a href="http://beginner.zhengjinfan.cn/detail-36" target="_blank">www.ectrip.com</a>
 		</p>
 		<p>交流群：248049395</p>
 		<br/>
-		<p style="color: #01AAED;">子窗体弹出对话框编辑表单的一些建议：如果是处理表单的，建议在子窗口弹出。把背景设置为无，如果只是提示信息，可以在父窗口弹出。</p>
 	</blockquote>
 	<fieldset class="layui-elem-field">
 		<legend>更新日志</legend>
 		<div class="layui-field-box">
 			<fieldset class="layui-elem-field layui-field-title">
-				<legend>版本号:# v0.1.4 2017-02-23</legend>
+				<legend>版本号:# v1.0 2017-02-23</legend>
 				<div class="layui-field-box">
 					<p>1、修复若干个bug</p>
-					<p>2、添加在子页面打开选项卡的demo,详见 -- 其他 -> 子窗体中打开选项卡</p>
-					<p>3、layui 更新到1.0.8</p>
-					<p>4、最后添加了你们期待已久的tab选项卡右键菜单。需要设置contextMenu为true</p>
-					<p>...</p>
-					<p>好啦啦~~~本次更新的内容就是这些，有疑问可以在群里面提出哦~~~~~</p>
 				</div>
 			</fieldset>
 		</div>
