--- a/src/main/resources/templates/demand/addDemand.html
+++ b/src/main/resources/templates/demand/addDemand.html
@@ -23,7 +23,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">选择模块</label>
                 <div class="layui-input-block" th:each="item : ${modleList}">
-                    <input type="checkbox" required="required" name="mids" th:title="${item.modleName}" th:value="${item.id}" />
+                    <input type="checkbox" name="mids" th:title="${item.modleName}" th:value="${item.id}" />
                 </div>
             </div>
 
