--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -41,7 +41,7 @@
 				<li class="layui-nav-item">
 					<a href="javascript:;" class="admin-header-user">
 						<img src="/images/0.jpg" />
-						<span>beginner</span>
+						<span th:text="${session.user}"></span>
 					</a>
 					<dl class="layui-nav-child">
 						<dd>
