--- a/src/main/resources/templates/user/editUser.html
+++ b/src/main/resources/templates/user/editUser.html
@@ -42,12 +42,6 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">确认密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="repassword" required="required" autocomplete="off" class="layui-input"/>
-                </div>
-            </div>
-            <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" >立即提交</button>
                     <button type="reset" class="layui-btn layui-btn-primary">重置</button>
@@ -62,9 +56,9 @@
     //Demo
     layui.use('form', function(){
         var form = layui.form();
-
+        var layer = layui.layer;
         //监听提交
-        form.on('submit(modlePro)', function(data){
+        form.on('submit(user)', function(data){
             layer.msg(JSON.stringify(data.field));
             return false;
         });
