--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -96,8 +96,8 @@
 
 	<div class="layui-footer footer footer-demo" id="admin-footer">
 		<div class="layui-main">
-			<p>2016 &copy;
-				<a href="http://www.ectrip.com/">www.ectrip.com/</a> LGPL license
+			<p>2017 &copy;
+				<a href="http://www.ectrip.com/">www.ectrip.com</a>   license
 			</p>
 		</div>
 	</div>
